- Added - Coming Soon pattern (for pages)
- Added - Call to Action patterns
- Added - Cards patterns with 3 variations
- Added - viewportWidth property to patterns registered from HTML files in the theme
- Added - Gutenberg page title highlight when focused / background contrast vs rest of the page
- Added - flip-x and flip-y CSS utility classes

v5.7.1
- Updated - core/archives type attribute
- Updated - core/latest-posts featured image alignment
- Updated - core/search query params output and styles extension ouput
- Updated - Starter content for homepage
- Added - Fragment cache for WooCommerce Mini Cart block (which changed the fragments loading on mouseover instead of page load) for LiteSpeed
- Fixed - Captcha4WP comment hooks and class name change after was bought (ANR plugin)
- Fixed - core/comments-title text alignment class
- Added - Google Fonts API with Open Sans and Shadows Into Light as default fonts (temporary until Google Fonts Provider is added to WP)

v5.7.0
- Removed - align{left/center/right/none} styles (as they were added in core)
- Updated - core/social-links styles regarding .nav-bar margin
- Updated - core/latest-posts and core/latest-comments template filter now takes a string as 1st argument (without parse_blocks)
- Updated - single.html template comments markup: remove group and rename core/comments-query-loop to core/comments
- Updated - core/navigation disable view_script_handles (we use Bootstraps's offcanvas and Navigation js)
- Updated - core/latest-comments remove background from comment content (works better on dark style)
- Fixed - A bug with spacing margin/padding generation when all paddings are equal but not on all dirrections
- Fixed - core/post-template issue with double css-# classes in wrapper (from Styles Gutenberg Extension)
- Fixed - core/comment-template issue with double css-# classes in wrapper (from Styles Gutenberg Extension)