@@ -1,9 +1,9 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"wp-site-header sticky-top"} /-->
 <!-- wp:group {"layout":{"inherit":true},"className":"pb-5"} -->
 <div class="wp-block-group pb-5">
-    <!-- wp:cover {"useFeaturedImage":true,"hasParallax":true,"dimRatio":90,"gradient":"primary-to-vivid-purple","contentPosition":"bottom center","align":"full","className":"py-5 mb-5","style":{"elements":{"link":{"color":{"text":"var:preset|color|white"}}}},"customCSS":"selector {\n  background-position: center -200px;\n}\n"} -->
+    <!-- wp:cover {"useFeaturedImage":true,"hasParallax":true,"dimRatio":90,"overlayColor":"primary","contentPosition":"bottom center","align":"full","className":"py-5 mb-5","style":{"elements":{"link":{"color":{"text":"var:preset|color|white"}}}},"customCSS":"selector {\n  background-position: center -200px;\n}\n"} -->
     <div class="wp-block-cover alignfull has-parallax has-custom-content-position is-position-bottom-center py-5 mb-5">
-        <span aria-hidden="true" class="wp-block-cover__background has-background-dim-90 has-background-dim has-background-gradient has-primary-to-vivid-purple-gradient-background"></span>
+        <span aria-hidden="true" class="wp-block-cover__background has-primary-background-color has-background-dim-90 has-background-dim"></span>
         <div class="wp-block-cover__inner-container">
             <!-- wp:post-title {"textAlign":"center","level":1,"className":"display-3"} /-->
             <!-- wp:pattern {"slug":"wecodeart/entry-meta"} /-->
