@@ -24,6 +24,13 @@
 			]
 		},
 		{
+			"name": "taxonomy-product_attribute",
+			"title": "Product attribute",
+			"postTypes": [
+				"product"
+			]
+		},
+		{
 			"name": "archive-product",
 			"title": "Product Catalog",
 			"postTypes": [
