@@ -54,6 +54,7 @@ v5.7.2
 - Added - viewportWidth property to patterns registered from HTML files in the theme
 - Added - Gutenberg page title highlight when focused / background contrast vs rest of the page
 - Added - flip-x and flip-y CSS utility classes
+- Added - Footer with Background image template part
 
 v5.7.1
 - Updated - core/archives type attribute
